# django_rest_api

./: README.md
file_uploader_rest/: docker-compose.yml  pyproject.toml
file_uploader_rest/file_uploader/: Dockerfile  entrypoint.sh
file_uploader_rest/file_uploader/core/: asgi.py  settings.py  urls.py
file_uploader_rest/file_uploader/filer/: models.py  serializers.py  tasks.py  tests.py  views.py
file_uploader_rest/file_uploader/filer/infrustructure/: utils.py
file_uploader_rest/file_uploader/filer/migrations/: 0001_initial.py
